# daccad

./: .gitignore  AGENTS.md  Cargo.toml  bun.lockb  elm.json  justfile  memo.txt  opencascade_example.lisp  package-lock.json  package.json  summary.txt  test.lisp  todo.txt  vite.config.ts
.github/workflows/: rust-fmt.yml
cadhr-lang/: Cargo.toml
cadhr-lang-macros/src/: lib.rs
cadhr-lang/src/: bezier.rs  bom.rs  collision.rs  constraint.rs  lib.rs  main.rs  manifold_bridge.rs  mock.rs  module.rs  parse.rs  sweep.rs  term_processor.rs  term_rewrite.rs
generated-rust-types/: encapsulated_types.rs  global_types.rs  manifold_main.rs  manifold_types.rs  todo_unions.rs
prolog/: Cargo.toml  justfile
prolog/src/: cell_heap.rs  compile_db.rs  compile_link.rs  compile_query.rs  compiler_bytecode.rs  constraint.rs  interpreter.rs  layered_uf.rs  lib.rs  main.rs  manifold_bridge.rs  mock.rs  parse.rs  register_managers.rs  resolve_term.rs  solver.rs  stacked_uf.rs  term_rewrite.rs  types.rs  unify.rs
prolog/src/layered_uf/: cell_store.rs  internal_vecs.rs  uf_core.rs
src/: cadhr_lang_wrapper.rs  debug.rs  events.rs  export.rs  highlight.rs  interpreter.rs  main.rs  main.ts  preview.rs  prolog_wrapper.rs  session.rs  ui.rs  wasm-daccad-bridge.ts  wasm-lisp-bridge.ts
src/elm/: Generated.elm  Main.elm  WasmBridge.elm  WasmLisp.elm
src/elm/Basics/: Extra.elm
src/preview/: pipeline.rs  shader.wgsl
src/prolog/: mock.rs  parse.rs
src/ui/: parts.rs  preview.rs  setup.rs  update.rs
tauri/: Cargo.toml
tauri/src/: cadprims.rs  main.rs
tauri/src/lisp/: env.rs
type-gen/: package-lock.json  package.json  tsconfig.json
type-gen/src/: index.ts
wasm-daccad-engine/: Cargo.toml  Generated.elm
wasm-daccad-engine/src/: env.rs  eval.rs  lib.rs  manifold_primitives.rs  manifold_types.rs
wasm-daccad-engine/src/manifold_types/: encapsulated_types.rs  global_types.rs  todo_unions.rs
wasm-lisp/: Cargo.toml  build.rs
wasm-lisp/src/: env.rs  eval.rs  lib.rs  manifold_primitives.rs  parser.rs
