[package]
name = "cadhr"
version = "0.1.0"
edition = "2024"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[workspace]
members = [
    "cadhr-lang",
]

[dependencies]
manifold-rs = "0.6.4"
bevy = "0.18"
bevy_egui = "0.39"
bevy-async-ecs = "0.10"
bevy_file_dialog = "0.9.1"
derived-deref = "2.1.0"
cadhr-lang = { path = "cadhr-lang" }
threemf = "0.7"
