[package]
name = "cadhr-lang"
version = "0.1.0"
edition = "2024"

[lib]
name = "cadhr_lang"
path = "src/lib.rs"

[[bin]]
name = "main"
path = "src/main.rs"

[features]
default = ["manifold"]
manifold = ["dep:manifold-rs", "dep:stl_io"]

[dependencies]
nom = "8.0.0"
manifold-rs = { version = "0.6.4", optional = true }
stl_io = { version = "0.8", optional = true }
cadhr-lang-macros = { path = "../cadhr-lang-macros" }
