[package]
name = "prolog"
version = "0.1.0"
edition = "2024"

[lib]
name = "prolog"
path = "src/lib.rs"

[[bin]]
name = "main"
path = "src/main.rs"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[dependencies]
nom = "8.0.0"
manifold-rs = "0.6.4"
