# Simplified workspace - lisp processing moved to WASM

[package]
name = "daccad"
version = "0.0.0"
description = "A CAD software for myself"
authors = ["tsukimizake"]
edition = "2024"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"

# Truck dependencies removed - now using manifold-3d through WASM


[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
