[package]
name = "wasm-daccad-engine"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
nom = "7.1.3"
nom_locate = "4.2.0"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1.0"
elm_rs = "0.2"
tsify = "0.4"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Window",
]

[build-dependencies]
wasm-bindgen = "0.2"
elm_rs = "0.2"
